# copilot-chat-to-markdown

./: .gitignore  .pre-commit-config.yaml  BRAINSTORM_VERBATIM_via_script_python.md  CONTRIBUTING.md  IMPROVEMENTS.md  README.md  SECURITY.md  chat_to_markdown.py  chat_to_markdown.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
samples/: chat.md  chat_via_script_bash.md  chat_via_script_python.md
tests/: __init__.py  test_chat_to_markdown.py  test_simple.py
